Upgrade to Java 24, Gradle 9.0, and several libraries